[package]
name = "credential-verifier"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
jwt-compact = { version = "0.8.0", features = ["ed25519-dalek", "rsa"] }
ed25519-dalek = "2.0.0"