[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }


[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
risc0-zkvm = { workspace = true, features = ["client"] }

[dependencies]
serde = "1.0"
serde_json = "1.0"
credential-verifier = { workspace = true }


